--- a/MEInsight.Web/Views/Shared/_CreateScriptsPartial.cshtml
+++ b/MEInsight.Web/Views/Shared/_CreateScriptsPartial.cshtml
@@ -44,12 +44,13 @@
         // Select2 search dropdown style for selects
         $('.select2')
             .select2({
-                theme: 'bootstrap4',
+                theme: 'bootstrap-5',
                 dropdownAutoWidth: true,
                 width: '100%',
                 allowClear: true,
                 selectOnBlur: true,
-                language: 'en'
+                language: 'en',
+                placeHolder: 'Select..'
             });
 
         // Disables Submit button after one click if form is valid
