--- a/MEInsight.Web/Views/Groups/Edit.cshtml
+++ b/MEInsight.Web/Views/Groups/Edit.cshtml
@@ -49,13 +49,15 @@
             <div class="mb-3 required" asp-enabled="GroupCode">
                 <!--input start-->
                 <label asp-for="GroupCode" class="form-label"></label>
-                <i data-content="@Localizer["Recommended: Year-OrganizationCode-LocationCode-Group-Month-Day"]"
-                   data-placement="top"
+                <i data-bs-content="@Localizer["Recommended: Year-OrganizationCode-LocationCode-Group-Month-Day"]"
+                   data-bs-placement="top"
                    data-bs-toggle="popover"
-                   data-container="body"
+                   data-bs-container="body"
                    style="cursor:pointer;"
-                   class="fas fa-info-circle text-muted"
-                   data-original-title="" title="" aria-describedby="popover">
+                   class="fa fa-info-circle text-muted"
+                   tabindex="0"
+                   data-bs-trigger="focus"
+                   data-bs-original-title="" title="" aria-describedby="popover">
                 </i>
                 <input asp-for="GroupCode" autocomplete="off" class="form-control" />
                 <span asp-validation-for="GroupCode" class="text-danger"></span>
@@ -91,13 +93,15 @@
             <div class="mb-3" asp-enabled="StartDate">
                 <!--date start-->
                 <label asp-for="StartDate" class="form-label"></label>
-                <i data-content="@Localizer["For School Enrollment - set this date to the academic year start date, for Training events - set to start of training"]"
-                   data-placement="top"
+                <i data-bs-content="@Localizer["For School Enrollment - set this date to the academic year start date, for Training events - set to start of training"]"
+                   data-bs-placement="top"
                    data-bs-toggle="popover"
-                   data-container="body"
+                   data-bs-container="body"
                    style="cursor:pointer;"
-                   class="fas fa-info-circle text-muted"
-                   data-original-title="" title="" aria-describedby="popover">
+                   class="fa fa-info-circle text-muted"
+                   tabindex="0"
+                   data-bs-trigger="focus"
+                   data-bs-original-title="" title="" aria-describedby="popover">
                 </i>
                 <span class="text-muted small">(@System.Globalization.CultureInfo.CurrentUICulture)</span>
                 <!-- use class .date to enable datepicker -->
@@ -115,13 +119,15 @@
             <div class="mb-3" asp-enabled="EndDate">
                 <!--date start-->
                 <label asp-for="EndDate" class="form-label"></label>
-                <i data-content="@Localizer["For School Enrollment - set this date to the academic year end date, for Training events - set to end of training"]"
-                   data-placement="top"
+                <i data-bs-content="@Localizer["For School Enrollment - set this date to the academic year end date, for Training events - set to end of training"]"
+                   data-bs-placement="top"
                    data-bs-toggle="popover"
-                   data-container="body"
+                   data-bs-container="body"
                    style="cursor:pointer;"
-                   class="fas fa-info-circle text-muted"
-                   data-original-title="" title="" aria-describedby="popover">
+                   class="fa fa-info-circle text-muted"
+                   tabindex="0"
+                   data-bs-trigger="focus"
+                   data-bs-original-title="" title="" aria-describedby="popover">
                 </i>
                 <span class="text-muted small">(@System.Globalization.CultureInfo.CurrentUICulture)</span>
                 <!-- use class .date to enable datepicker -->
@@ -164,14 +170,20 @@
 </div>
 
 @section Styles {
-    @{await Html.RenderPartialAsync("_EditStylesPartial");}
-}
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-    @{await Html.RenderPartialAsync("_EditScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_EditStylesPartial");
+    }
+    }
+    @section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+    @{
+        await Html.RenderPartialAsync("_EditScriptsPartial");
+    }
 
     <script>
-        $(document).ready(function () {
+        $(document).ready(function() {
 
             var cultureInfo = '@System.Globalization.CultureInfo.CurrentCulture.DisplayName';
 
@@ -197,12 +209,12 @@
             }
 
             $('.date.startdate')
-                .on("changeDate", function (e) {
+                .on("changeDate", function(e) {
                     checkDates();
                 });
 
-           $('.date.enddate')
-               .on("changeDate", function (e) {
+            $('.date.enddate')
+                .on("changeDate", function(e) {
                     checkDates();
                 });
         });
