--- a/MEInsight.Web/Views/Participants/Edit.cshtml
+++ b/MEInsight.Web/Views/Participants/Edit.cshtml
@@ -1,4 +1,4 @@
-@model MEInsight.Web.Models.ParticipantsViewModel
+@model MEInsight.Entities.Core.Participant
 
 @{
     ViewData["Title"] = @Localizer["Edit"].Value + " " + @Localizer["Participant"].Value;
@@ -18,7 +18,6 @@
             <input type="hidden" asp-for="RefParticipantTypeId" value="@ViewBag.RefParticipantTypeId" />
             @*[Remote] Validation to validate user input and verify if the Participant and Student Code already exists.*@
             <input type="hidden" value="@Model.ParticipantCode" name="ParticipantCodeInitialValue" />
-            <input type="hidden" value="@Model.StudentCode" name="StudentCodeInitialValue" />
             <input type="hidden" value="@ViewBag.GroupId" name="GroupId" />
 
             <div class="card mb-3">
@@ -295,177 +294,6 @@
                     </div>
                 </div>
             </div>
-
-            @if (ViewBag.RefParticipantTypeId == 1)
-            {
-                // Student
-                <div class="card mb-3">
-                    <div class="card-header">
-                        @Localizer["Student"]
-                    </div>
-                    <div class="card-body">
-                        <div class="card mt-3">
-                            <div class="card-header">
-                                Student
-                            </div>
-                            <div class="card-body">
-                                <div class="mb-3" asp-enabled="StudentCode">
-                                    <!--input start-->
-                                    <label asp-for="StudentCode" class="form-label"></label>
-                                    <input asp-for="StudentCode" autocomplete="off" class="form-control" />
-                                    <span asp-validation-for="StudentCode" class="text-danger"></span>
-                                    <!--input end-->
-                                </div>
-
-                                <div class="mb-3" asp-enabled="RefStudentTypeId">
-                                    <!--fk select start-->
-                                    <label asp-for="RefStudentTypeId" class="form-label"></label>
-                                    <select asp-for="RefStudentTypeId" class="form-control form-select" asp-items="ViewBag.RefStudentTypeId">
-                                        <option disabled selected></option>
-                                    </select>
-                                    <span asp-validation-for="RefStudentTypeId" class="text-danger"></span>
-                                    <!--fk select end-->
-                                </div>
-
-                                <div class="mb-3" asp-enabled="RefStudentSpecializationId">
-                                    <!--fk select start-->
-                                    <label asp-for="RefStudentSpecializationId" class="form-label"></label>
-                                    <select asp-for="RefStudentSpecializationId" class="form-control form-select" asp-items="ViewBag.RefStudentSpecializationId">
-                                        <option disabled selected></option>
-                                    </select>
-                                    <span asp-validation-for="RefStudentSpecializationId" class="text-danger"></span>
-                                    <!--fk select end-->
-                                </div>
-
-                                <div class="mb-3" asp-enabled="RefStudentYearOfStudyId">
-                                    <!--fk select start-->
-                                    <label asp-for="RefStudentYearOfStudyId" class="form-label"></label>
-                                    <select asp-for="RefStudentYearOfStudyId" class="form-control form-select" asp-items="ViewBag.RefStudentYearOfStudyId">
-                                        <option disabled selected></option>
-                                    </select>
-                                    <span asp-validation-for="RefStudentYearOfStudyId" class="text-danger"></span>
-                                    <!--fk select end-->
-                                </div>
-
-                                <div class="mb-3" asp-enabled="ParentGuardian">
-                                    <!--input start-->
-                                    <label asp-for="ParentGuardian" class="form-label"></label>
-                                    <input asp-for="ParentGuardian" autocomplete="off" class="form-control" />
-                                    <span asp-validation-for="ParentGuardian" class="text-danger"></span>
-                                    <!--input end-->
-                                </div>
-
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-            }
-
-            @if (ViewBag.RefParticipantTypeId == 2)
-            {
-                // Teacher
-                <div class="card mb-3">
-                    <div class="card-header">
-                        @Localizer["Teacher"]
-                    </div>
-                    <div class="card-body">
-                        <div class="card">
-                            <div class="card-header">
-                                Teacher
-                            </div>
-                            <div class="card-body">
-                                <div class="mb-3" asp-enabled="RefTeacherTypeId">
-                                    <!--fk select start-->
-                                    <label asp-for="RefTeacherTypeId" class="form-label"></label>
-                                    <select asp-for="RefTeacherTypeId" class="form-control form-select" asp-items="ViewBag.RefTeacherTypeId">
-                                        <option disabled selected></option>
-                                    </select>
-                                    <span asp-validation-for="RefTeacherTypeId" class="text-danger"></span>
-                                    <!--fk select end-->
-                                </div>
-
-                                <div class="mb-3" asp-enabled="RefTeacherPositionId">
-                                    <!--fk select start-->
-                                    <label asp-for="RefTeacherPositionId" class="form-label"></label>
-                                    <select asp-for="RefTeacherPositionId" class="form-control form-select" asp-items="ViewBag.RefTeacherPositionId">
-                                        <option disabled selected></option>
-                                    </select>
-                                    <span asp-validation-for="RefTeacherPositionId" class="text-danger"></span>
-                                    <!--fk select end-->
-                                </div>
-
-                                <div class="mb-3" asp-enabled="RefTeacherEmploymentTypeId">
-                                    <!--fk select start-->
-                                    <label asp-for="RefTeacherEmploymentTypeId" class="form-label"></label>
-                                    <select asp-for="RefTeacherEmploymentTypeId" class="form-control form-select" asp-items="ViewBag.RefTeacherEmploymentTypeId">
-                                        <option disabled selected></option>
-                                    </select>
-                                    <span asp-validation-for="RefTeacherEmploymentTypeId" class="text-danger"></span>
-                                    <!--fk select end-->
-                                </div>
-
-                                <div class="mb-3" asp-enabled="GradeLevels">
-                                    <!--input start-->
-                                    <label asp-for="GradeLevels" class="form-label"></label>
-                                    <input asp-for="GradeLevels" autocomplete="off" class="form-control" />
-                                    <span asp-validation-for="GradeLevels" class="text-danger"></span>
-                                    <!--input end-->
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            }
-
-            @if (ViewBag.RefParticipantTypeId == 3)
-            {
-                // Education Administrator
-                <div class="card mb-3">
-                    <div class="card-header">
-                        @Localizer["Education Administrator"]
-                    </div>
-                    <div class="card-body">
-                        <div class="card">
-                            <div class="card-header">
-                                Education Administrator
-                            </div>
-                            <div class="card-body">
-
-                                <div class="mb-3" asp-enabled="RefEducationAdministratorTypeId">
-                                    <!--fk select start-->
-                                    <label asp-for="RefEducationAdministratorTypeId" class="form-label"></label>
-                                    <select asp-for="RefEducationAdministratorTypeId" class="form-control form-select" asp-items="ViewBag.RefEducationAdministratorTypeId">
-                                        <option disabled selected></option>
-                                    </select>
-                                    <span asp-validation-for="RefEducationAdministratorTypeId" class="text-danger"></span>
-                                    <!--fk select end-->
-                                </div>
-
-                                <div class="mb-3" asp-enabled="RefEducationAdministratorPositionId">
-                                    <!--fk select start-->
-                                    <label asp-for="RefEducationAdministratorPositionId" class="form-label"></label>
-                                    <select asp-for="RefEducationAdministratorPositionId" class="form-control form-select" asp-items="ViewBag.RefEducationAdministratorPositionId">
-                                        <option disabled selected></option>
-                                    </select>
-                                    <span asp-validation-for="RefEducationAdministratorPositionId" class="text-danger"></span>
-                                    <!--fk select end-->
-                                </div>
-
-                                <div class="mb-3" asp-enabled="RefEducationAdministratorOfficeId">
-                                    <!--fk select start-->
-                                    <label asp-for="RefEducationAdministratorOfficeId" class="form-label"></label>
-                                    <select asp-for="RefEducationAdministratorOfficeId" class="form-control form-select" asp-items="ViewBag.RefEducationAdministratorOfficeId">
-                                        <option disabled selected></option>
-                                    </select>
-                                    <span asp-validation-for="RefEducationAdministratorOfficeId" class="text-danger"></span>
-                                    <!--fk select end-->
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            }
 
             <!-- button group start -->
             <div class="mb-3 text-end mt-5">
