--- a/MEInsight.Web/Views/Shared/_Layout.cshtml
+++ b/MEInsight.Web/Views/Shared/_Layout.cshtml
@@ -48,7 +48,7 @@
         </nav>
     </header>
 
-    <div class="container-fluid">
+    <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
