--- a/MEInsight.Web/Views/GroupEnrollments/Index.cshtml
+++ b/MEInsight.Web/Views/GroupEnrollments/Index.cshtml
@@ -39,36 +39,35 @@
                 else
                 {
                     <!--create start-->
-            <div class="btn-group btn-group-sm mb-2" role="group" aria-label="creategroup">
-                <!--button group start-->
-                <!--create button dropdown start-->
-                <div policy="RequireCreateRole" class="btn-group btn-group-sm" role="group">
-                    <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <i class="fas fa-plus"></i> @Localizer["Create New"]
-                    </button>
-                    <div class="dropdown-menu" aria-labelledby="btnGroup1Drop1">
-                        <!--dropdown items by ParticipantType-->
-                        @foreach (var item in (IEnumerable<SelectListItem>)ViewBag.ParticipantTypeId)
-                        {
-                            <a asp-action="Create" asp-route-OrganizationId="@ViewBag.OrganizationId" asp-controller="Participants" asp-route-GroupId="@ViewBag.ParentId" asp-route-RefParticipantTypeId="@item.Value" role="button" class="btn btn-primary dropdown-item">
-                                <i class="fas fa-plus"></i> @Localizer["New"] @item.Text
-                            </a>
-                        }
+                    <div class="btn-group btn-group-sm mb-2" role="group" aria-label="creategroup">
+                        <!--button group start-->
+                        <!--create button dropdown start-->
+                        <div policy="RequireCreateRole" class="btn-group btn-group-sm" role="group">
+                            <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <i class="fas fa-plus"></i> @Localizer["Create New"]
+                            </button>
+                            <div class="dropdown-menu" aria-labelledby="btnGroup1Drop1">
+                                <!--dropdown items by ParticipantType-->
+                                @foreach (var item in (IEnumerable<SelectListItem>)ViewBag.ParticipantTypeId)
+                                {
+                                    <a asp-action="Create" asp-route-OrganizationId="@ViewBag.OrganizationId" asp-controller="Participants" asp-route-GroupId="@ViewBag.ParentId" asp-route-RefParticipantTypeId="@item.Value" role="button" class="btn btn-primary dropdown-item">
+                                        <i class="fas fa-plus"></i> @Localizer["New"] @item.Text
+                                    </a>
+                                }
+
+                            </div>
+                        </div>
+                        <!--enroll button start-->
+                        <a policy="RequireCreateRole" asp-route-id="@ViewBag.ParentId" asp-action="Create" class="btn btn-primary"><i class="fas fa-user-plus"></i> @Localizer["Add Existing"]</a>
+                        <!--enroll button end-->
+                        <!--create button dropdown end-->
+                        @*<a policy="RequireCreateRole" asp-route-id="@ViewBag.ParentId" asp-action="Enroll" class="btn btn-secondary"><i class="fas fa-user-plus"></i> @Localizer["Enroll Existing"]</a>*@
+                        <!--update attendance button start-->
+                        <a policy="RequireEditRole" asp-route-id="@ViewBag.ParentId" asp-action="Attendance" class="btn btn-secondary"><i class="far fa-calendar-alt"></i> @Localizer["Update Attendance"]</a>
+                        <!--update attendance button end-->
 
                     </div>
-                </div>
-                <!--enroll button start-->
-                <a policy="RequireCreateRole" asp-route-id="@ViewBag.ParentId" asp-action="Create" class="btn btn-primary"><i class="fas fa-user-plus"></i> @Localizer["Add Existing"]</a>
-                <!--enroll button end-->
-                <!--create button dropdown end-->
-                @*<a policy="RequireCreateRole" asp-route-id="@ViewBag.ParentId" asp-action="Enroll" class="btn btn-secondary"><i class="fas fa-user-plus"></i> @Localizer["Enroll Existing"]</a>*@
-                <!--update attendance button start-->
-                <a policy="RequireEditRole" asp-route-id="@ViewBag.ParentId" asp-action="Attendance" class="btn btn-secondary"><i class="far fa-calendar-alt"></i> @Localizer["Update Attendance"]</a>
-                <!--update attendance button end-->
-
-            </div>
                     <!--create end-->
-
                     <!--close button start-->
                     <div policy="RequireMELOfficerRole" class="btn-group btn-group-sm mb-2" role="group" aria-label="closegroup">
                         <button id="btn-close" type="button" class="btn btn-warning">
@@ -146,7 +145,9 @@
                             <td>
                                 @if (item.Attendance != null)
                                 {
-                                    @Html.DisplayFor(modelItem => item.Attendance)<span> @ViewBag.ProgramAttendanceUnit</span>
+                                    @Html.DisplayFor(modelItem => item.Attendance)
+
+                                    <span> @ViewBag.ProgramAttendanceUnit</span>
                                 }
                             </td>
                             <td>
@@ -155,28 +156,28 @@
                             <td class="text-end d-print-none">
                                 <div class="btn-group btn-group-sm" role="group" aria-label="Actions">
                                     <a asp-action="Details" asp-route-id="@item.GroupEnrollmentId"
-                                       class="btn btn-link text-gray btn-sm d-print-none btn-action"
-                                       data-container="body" data-bs-toggle="tooltip" data-placement="top" title="" data-original-title='@Localizer["Details"]'>
+                                   class="btn btn-link text-gray btn-sm d-print-none btn-action"
+                                   data-container="body" data-bs-toggle="tooltip" data-placement="top" title="" data-original-title='@Localizer["Details"]'>
                                         <i class="fas fa-info-circle fa-sm" aria-hidden="true"></i>
                                     </a>
 
                                     @if (ViewBag.Closed != true)
                                     {
                                         <a policy="RequireEditRole" asp-action="Edit" asp-route-id="@item.GroupEnrollmentId"
-                                           class="btn btn-link text-gray btn-sm d-print-none btn-action"
-                                           data-container="body" data-bs-toggle="tooltip" data-placement="top" title="" data-original-title='@Localizer["Edit"]'>
+                                   class="btn btn-link text-gray btn-sm d-print-none btn-action"
+                                   data-container="body" data-bs-toggle="tooltip" data-placement="top" title="" data-original-title='@Localizer["Edit"]'>
                                             <i class="fas fa-pencil-alt fa-sm" aria-hidden="true"></i>
                                         </a>
 
                                         <a policy="RequireEditRole" asp-controller="Participants" asp-action="Edit" asp-route-id="@item.ParticipantId" asp-route-GroupId="@item.GroupId"
-                                           class="btn btn-link text-gray btn-sm d-print-none btn-action"
-                                           data-container="body" data-bs-toggle="tooltip" data-placement="top" title="" data-original-title='@Localizer["Edit"]'>
+                                   class="btn btn-link text-gray btn-sm d-print-none btn-action"
+                                   data-container="body" data-bs-toggle="tooltip" data-placement="top" title="" data-original-title='@Localizer["Edit"]'>
                                             <i class="fas fa-user-edit fa-sm" aria-hidden="true"></i>
                                         </a>
 
                                         <a policy="RequireDeleteRole" asp-action="Delete" asp-route-id="@item.GroupEnrollmentId"
-                                           class="btn btn-link text-gray btn-sm d-print-none btn-action"
-                                           data-container="body" data-bs-toggle="tooltip" data-placement="top" title="" data-original-title='@Localizer["Delete"]'>
+                                   class="btn btn-link text-gray btn-sm d-print-none btn-action"
+                                   data-container="body" data-bs-toggle="tooltip" data-placement="top" title="" data-original-title='@Localizer["Delete"]'>
                                             <i class="far fa-trash-alt fa-sm" aria-hidden="true"></i>
                                         </a>
                                     }
@@ -184,10 +185,10 @@
                                     @if (ViewBag.NextController != null)
                                     {
                                         <a asp-controller="@ViewBag.NextController"
-                                           asp-action="Index"
-                                           asp-route-id="@item.GroupEnrollmentId"
-                                           class="btn btn-link btn-sm d-print-none btn-action"
-                                           data-container="body" data-bs-toggle="tooltip" data-placement="top" title="" data-original-title='@Localizer["Open"]'>
+                                   asp-action="Index"
+                                   asp-route-id="@item.GroupEnrollmentId"
+                                   class="btn btn-link btn-sm d-print-none btn-action"
+                                   data-container="body" data-bs-toggle="tooltip" data-placement="top" title="" data-original-title='@Localizer["Open"]'>
                                             <i class="fas fa-chevron-right fa-sm" aria-hidden="true"></i>
                                         </a>
                                     }
@@ -217,67 +218,111 @@
     </div>
     <!--footer buttons end-->
 </div><!--content end-->
-
 @section Styles {
-    @{await Html.RenderPartialAsync("_ListStylesPartial");}
-}
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ListScriptsPartial");}
+    @{
+    <link href="~/lib/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css" rel="stylesheet" asp-append-version="true" />
+    <link href="~/lib/sweetalert2/dist/bootstrap-4.min.css" rel="stylesheet" asp-append-version="true" />
+        await Html.RenderPartialAsync("_ListStylesPartial");
+    }
+    }
+    @section Scripts {
+    @{
+    <script src="~/lib/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js" asp-append-version="true"></script>
+    <script src="~/lib/sweetalert2/dist/sweetalert2.all.min.js" asp-append-version="true"></script>
+        await Html.RenderPartialAsync("_ListScriptsPartial");
+    }
 
     <script>
-        $(document).ready(function () {
-            var closePrompt = bootbox.prompt({
-                show: false,
-                size: "medium",
-                title: '@Localizer["Complete Enrollment"]',
-                message: "@Localizer["You will set this group as Completed. Please enter Completion Date:"]",
-                inputType: "date",
-                required: true,
-                callback: function (result) {
-                    if (result) {
-                        $.ajax({
-                            type: "post",
-                            url: "/Requests/CloseGroup?id=" + "@ViewBag.ParentId" + "&completionDate=" + result,
-                            contentType: "application/json; charset=utf-8",
-                            dataType: "json",
-                            success: function (data) {
-                                if (data.status) {
-                                    window.location.replace("@Url.Action("Index", "GroupEnrollments", new { id = ViewBag.ParentId })");
-                                }
-                            }
-                        });
-                    }
-                }
-            });
-
-            $('#btn-close').on('click', function () {
-                closePrompt.modal('show');
-            });
-
-
-            $('#btn-open').on('click', function () {
-                bootbox.confirm({
-                    size: "medium",
-                    title: '@Localizer["Re-open Group"]',
-                    message: "@Localizer["Are you sure you want to reopen this Group? Reopening will reset Completion status for all enrolled participants. Updating attendance will be allowed."]",
-                    callback: function (result) {
-                        if (result) {
+        $(document).ready(function() {
+            $('#btn-close').on('click', function() {
+                Swal.fire({
+                    title: '@Localizer["Complete Enrollment"]',
+                    html: '<div class="mb-3"><div class="form-text">@Localizer["You will set this group as Completed. Please enter Completion Date:"]</div>' +
+                        '<input id="close-date" data-date-autoclose="true" autocomplete="off" type="text" class="form-control" placeholder="@System.Globalization.DateTimeFormatInfo.CurrentInfo.ShortDatePattern" /></div>',
+                    stopKeydownPropagation: false,
+                    showCancelButton: true,
+                    confirmButtonColor: '#3085d6',
+                    cancelButtonColor: '#d33',
+                    confirmButtonText: 'Confirm',
+                    width: '20rem',
+                    didOpen: () => {
+                        $('#close-date').datepicker();
+                    },
+                    preConfirm: () => {
+                        var selecteddate = $('#close-date').datepicker('getDate');
+                        if (selecteddate == null) {
+                            Swal.showValidationMessage(`Please select a date`)
+                        }
+                    },
+                }).then((result) => {
+                    if (result.isConfirmed) {
+                        var selecteddate = document.getElementById("close-date").value;
+                        if (selecteddate != null) {
                             $.ajax({
                                 type: "post",
-                                url: "/Requests/OpenGroup?id=" + "@ViewBag.ParentId",
+                                url: "/Requests/CloseGroup?id=" + "@ViewBag.ParentId" + "&completionDate=" + selecteddate,
                                 contentType: "application/json; charset=utf-8",
                                 dataType: "json",
-                                success: function (data) {
+                                success: function(data) {
                                     if (data.status) {
-                                        window.location.replace("@Url.Action("Index", "GroupEnrollments", new { id = ViewBag.ParentId })");
+                                        Swal.fire({
+                                            text: 'Group closed',
+                                            confirmButtonText: 'Ok',
+                                            confirmButtonColor: '#3085d6',
+                                            width: '20rem'
+                                        }).then((result) => {
+                                            if (result.isConfirmed) {
+                                                window.location.replace("@Url.Action("Index", "GroupEnrollments", new { id = ViewBag.ParentId })");
+                                            }
+                                        })
                                     }
                                 }
                             });
                         }
+                    } else if (result.isDenied) {
+                        Swal.fire('Changes are not saved', '', 'info')
                     }
-                });
+                })
             });
 
+            $('#btn-open').on('click', function() {
+                Swal.fire({
+                    title: '@Localizer["Re-open Group"]',
+                    text: "@Localizer["Are you sure you want to reopen this Group? Reopening will reset Completion status for all enrolled participants. Updating attendance will be allowed."]",
+                    stopKeydownPropagation: false,
+                    showCancelButton: true,
+                    confirmButtonColor: '#3085d6',
+                    cancelButtonColor: '#d33',
+                    confirmButtonText: 'Confirm',
+                    width: '20rem'
+                }).then((result) => {
+                    if (result.isConfirmed) {
+                        $.ajax({
+                            type: "post",
+                            url: "/Requests/OpenGroup?id=" + "@ViewBag.ParentId",
+                            contentType: "application/json; charset=utf-8",
+                            dataType: "json",
+                            success: function(data) {
+                                if (data.status) {
+                                    Swal.fire({
+                                        text: 'Group open',
+                                        confirmButtonColor: '#3085d6',
+                                        confirmButtonText: 'Ok',
+                                        width: '20rem'
+                                    }).then((result) => {
+                                        if (result.isConfirmed) {
+                                            window.location.replace("@Url.Action("Index", "GroupEnrollments", new { id = ViewBag.ParentId })");
+                                        }
+                                    });
+                                }
+                            }
+                        });
+                        Swal.fire('Saved!', '', 'success');
+                    } else if (result.isDenied) {
+                        Swal.fire('Changes are not saved', '', 'info')
+                    }
+                })
+            });
         });
     </script>
 }
