--- a/MEInsight.Web/Views/Shared/_UpdateListStylesPartial.cshtml
+++ b/MEInsight.Web/Views/Shared/_UpdateListStylesPartial.cshtml
@@ -1,4 +1,5 @@
-﻿<script type="text/javascript" src="~/lib/datatables/datatables.min.js" asp-append-version="true"></script>
+﻿<link href="~/lib/datatables/datatables.min.css" rel="stylesheet" asp-append-version="true"/>
+<link href="~/css/dataTables.min.css" rel="stylesheet" asp-append-version="true"/>
 <style>
 .status {
     max-width: 120px;
