--- a/MEInsight.Web/Views/Shared/_ValidationScriptsPartial.cshtml
+++ b/MEInsight.Web/Views/Shared/_ValidationScriptsPartial.cshtml
@@ -2,6 +2,22 @@
 <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
 <script>
     // Use JQuery validation with Bootstrap 4 validation classes
+    $.validator.setDefaults({
+        errorElement: 'span',
+        errorPlacement: function (error, element) {
+            error.addClass('invalid-feedback');
+            element.closest('.mb-3').append(error);
+        },
+        highlight: function (element, errorClass, validClass) {
+            $(element).addClass("is-invalid").removeClass("is-valid");
+            $(element.form).find("[data-valmsg-for=" + element.id + "]").addClass("invalid-feedback");
+        },
+        unhighlight: function (element, errorClass, validClass) {
+            $(element).addClass("is-valid").removeClass("is-invalid");
+            $(element.form).find("[data-valmsg-for=" + element.id + "]").removeClass("invalid-feedback");
+        }
+    });
+
     //$.validator.setDefaults({
     //    errorElement: 'span',
     //    errorPlacement: function (error, element) {
@@ -16,16 +32,16 @@
     //    }
     //});
 
-    $.validator.setDefaults({
-        errorClass: "",
-        validClass: "",
-        highlight: function(element, errorClass, validClass) {
-            $(element).addClass("is-invalid").removeClass("is-valid");
-            $(element.form).find("[data-valmsg-for=" + element.id + "]").addClass("invalid-feedback");
-        },
-        unhighlight: function(element, errorClass, validClass) {
-            $(element).addClass("is-valid").removeClass("is-invalid");
-            $(element.form).find("[data-valmsg-for=" + element.id + "]").removeClass("invalid-feedback");
-        }
-    });
+    //$.validator.setDefaults({
+    //    errorClass: "",
+    //    validClass: "",
+    //    highlight: function(element, errorClass, validClass) {
+    //        $(element).addClass("is-invalid").removeClass("is-valid");
+    //        $(element.form).find("[data-valmsg-for=" + element.id + "]").addClass("invalid-feedback");
+    //    },
+    //    unhighlight: function(element, errorClass, validClass) {
+    //        $(element).addClass("is-valid").removeClass("is-invalid");
+    //        $(element.form).find("[data-valmsg-for=" + element.id + "]").removeClass("invalid-feedback");
+    //    }
+    //});
 </script>
